aut/deployment/ingress/ingress_gce.yaml
apiVersion: apps/v1
kind: Ingress
metadata:
 name: gateway
spec:
  rules:
  - http:
      paths:
      - path: /admin/accounts
        backend:
          serviceName: admin
          servicePort: 80
      - path: /admin/*
        backend:
          serviceName: admin
          servicePort: 80
      - path: /admin/
        backend:
          serviceName: admin
          servicePort: 80
      - path: /admin/time
        backend:
          serviceName: admin
          servicePort: 80
      - path: /customer/*
        backend:
          serviceName: customer
          servicePort: 80
      - path: /customer/
        backend:
          serviceName: customer
          servicePort: 80
      - path: /accounts/*
        backend:
          serviceName: customer
          servicePort: 80
      - path: /balance
        backend:
          serviceName: customer
          servicePort: 80
